# tflite_ptq

./: .gitignore  LICENSE  Makefile  README.md  dumb.py  extract_dense.py  extract_from_tflite.py  gen_n_verify.py  manual_convolution.py  manual_verify.py  pyproject.toml  verify_extraction.py
src/: cnn.py  dataset.py  logger.py  mlp.py  tflite_utils.py
test_generated/: Makefile  arm-qemu-opt.gdb  arm-qemu.gdb  arm.mk  avr-qemu-opt.gdb  avr-qemu.gdb  avr.mk  common.mk  emulate-arm.sh  emulate-avr.sh  emulate-riscv.sh  msp430.mk  riscv-qemu-opt.gdb  riscv-qemu.gdb  riscv.mk  x86.mk
test_generated/arm/: linker.ld  startup.s
test_generated/include/: filters.h  macros.h  model.h  model_opt.h  multiply.h
test_generated/src/: filters.c  main.c  model.c  model_opt.c  multiply.c
